# title_fix

./: .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  MANIFEST.in  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_README.md  README.md  build.sh  performance_test.py  pyproject.toml  render.yaml  start.sh
.github/workflows/: deploy.yml
backend/: main.py  requirements.txt
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
tests/: test_title_fix.py
title_fix/: __init__.py  constants.py  core.py  utils.py
